# Cases-Praticos

./: README.md
analise-desempenho-lol/: intro.md  pyproject.toml
analise-desempenho-lol/.ipynb_checkpoints/: analise_desempenho_lol-checkpoint.ipynb
analise-desempenho-lol/analise_desempenho_lol/: analise_desempenho_lol.ipynb  analise_lol.ipynb  test.py
analise-desempenho-lol/analise_desempenho_lol/.ipynb_checkpoints/: analise_desempenho_lol-checkpoint.ipynb
